# rs_filesystem

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile  mcp_schema.json
src/: main.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs  tools_test.rs  types.rs  utilities.rs
src/mcp/templates/: prompts.json  resources.json  tools.json
