[package]
name = "rs_filesystem"
version = "0.1.0"
edition = "2021"
authors = ["Chris Odom <chris@opentransactions.org>"]
description = "MCP Filesystem Server"
keywords = ["rust", "ai", "mcp", "cli", "filesystem"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
url = { version = "2.5", features = ["serde"] }
rpc-router = "0.1.3"
maplit = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
signal-hook = "0.3"
git2 = "0.18"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
